# azulejo-gl-asteroids

./: .gitignore  Asteroids.cpp  Asteroids.h  Bullet.cpp  Bullet.h  CMakeLists.txt  CMakeSettings.json  Common.h  GLAsteroids.sln  GLBackend.cpp  GLEntity.cpp  GLEntity.h  GLEntityTask.cpp  GLEntityTask.h  GLGame.cpp  GLGame.h  LICENSE.txt  QMakeLists.pro  README.md  Rock.cpp  Rock.h  Ship.cpp  Ship.h  main.cpp  start_osx_devenv.sh
GLAsteroids/: Asteroids - Copy.cpp  Asteroids - Copy.h  Asteroids.cpp  Asteroids.h  Bullet.cpp  Bullet.h  CMakeLists.txt  CMakeSettings.json  Common.h  GLAsteroids.vcxproj  GLAsteroids.vcxproj.filters  GLEntity.cpp  GLEntity.h  GLEntityTask.cpp  GLEntityTask.h  GLGame.cpp  GLGame.h  GLSerializer.cpp  GLSerializer.h  README.md  Rock.cpp  Rock.h  Ship.cpp  Ship.h  config.h  filesystem.h  filesystem.hpp  launch.vs.json  main.cpp  start_osx_devenv.sh  vcpkg.json
config/: serialization.h
configuration/: serialization.h
game/: Asteroids.cpp  Asteroids.h  Bullet.cpp  Bullet.h  Rock.cpp  Rock.h  Ship.cpp  Ship.h
gl/: GLBackend.h  GLEntity.cpp  GLEntity.h
include/configuration/: config.h
include/game/: Asteroids.h  AsteroidsConsumers.h  Bullet.h  Rock.h  Ship.h
include/gl/: GL.h  GLBackend.h  GLBackendEmitters.h  GLBackendWindow.h  GLEntity.h  GLEntityTask.h  GLProjectionInfo.h  GLWindow.h
qml/: GLAsteroids.qml
resources/: GLAsteroids.qrc
scripts/: linux_install_dependencies.sh  macos_install_dependencies.sh  vcpkg_clean_intermediate.sh  vcpkg_install.sh  vcpkg_uninstall.sh
src/game/: Asteroids.cpp  AsteroidsConsumers.cpp  Bullet.cpp  Rock.cpp  Ship.cpp
src/gl/: GL.cpp  GLBackend.cpp  GLBackendEmitters.cpp  GLBackendWindow.cpp  GLEntity.cpp  GLEntityTask.cpp  GLProjectionInfo.cpp  GLWindow.cpp
